// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container accepts a className prop 1`] = `
<WithStyles(Container) className="myClassName">
  <Container className="myClassName" classes={{...}} inset={true}>
    <div className="RSFContainer-root-1 myClassName RSFContainer-inset-2" />
  </Container>
</WithStyles(Container)>
`;

exports[`Container accepts a root class 1`] = `
<WithStyles(Container) classes={{...}}>
  <Container classes={{...}} inset={true}>
    <div className="RSFContainer-root-1 myRootClass RSFContainer-inset-2" />
  </Container>
</WithStyles(Container)>
`;

exports[`Container renders with no props 1`] = `
<WithStyles(Container)>
  <Container classes={{...}} inset={true}>
    <div className="RSFContainer-root-1 RSFContainer-inset-2" />
  </Container>
</WithStyles(Container)>
`;

exports[`Container spreads props to the underlying div 1`] = `
<WithStyles(Container) style={{...}}>
  <Container style={{...}} classes={{...}} inset={true}>
    <div className="RSFContainer-root-1 RSFContainer-inset-2" style={{...}} />
  </Container>
</WithStyles(Container)>
`;
